spacing bug removed?

--- a/calculator/main.css
+++ b/calculator/main.css
@@ -17,6 +17,10 @@
     width: 236px;
     height: 40px;
     margin-bottom: 10px;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
 }
 .calc-button{
     width: 99%;
@@ -27,3 +31,4 @@
     border-width: 1px;
     border-color: gray;
 }
+/*make container of calculator*/
